# IB_MCP

./: docker-compose.yml
api_gateway/: Dockerfile  conf.yaml  healthcheck.sh  run_gateway.sh
mcp_server/: pyproject.toml
